# ws-logging

./: .gitignore  pyproject.toml  ws-client.py  ws-server.py
example/: run_listening_server.py  run_logger.py
example/websockets_example/: ws-client.py  ws-server.py
ws_logging/: __init__.py  handler.py
ws_logging/formatters/: __init__.py  json_formatter.py  repr_formatter.py
ws_logging/handlers/: __init__.py  using_aiohttp.py  using_websockets_lib.py
ws_logging/listeners/: __init__.py  aiohttp_listener.py  using_aiohttp.py
